--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,11 +25,16 @@
                 <img src="/assets/nav_icons/menu.svg" alt="menu icon">
             </div>
             <ul>
-                <li>Homepage</li>
-                <li>Posts</li>
-                <li>Dashboard</li>
+                <li>
+                    <a href="/">Homepage</a>
+                </li>
+                <li>
+                    <a href="/dashboard">Dashboard</a>
+                </li>
+                <li>
+                    <a href="/login">Login</a>
+                </li>
 
-         
             </ul>
         </div>
         <div class="search">
@@ -38,7 +43,11 @@
                 <img src="/assets/nav_icons/search.svg" alt="">
             </span>
         </div>
-        <button class="uploadBtn">Upload</button>
+        <div class="uploadBtn">
+            <a href="/dashboard/addQuestion">Upload</a>
+        </div>
+
+
 
     </header>
     <main>
