--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,9 +31,15 @@
                 <li>
                     <a href="/dashboard">Dashboard</a>
                 </li>
+                {{#if loggedIn}}
+                <li id="logout">
+                    <a href="javascript:;">Logout</a>
+                </li>
+                {{else}}
                 <li>
                     <a href="/login">Login</a>
                 </li>
+                {{/if}}
 
             </ul>
         </div>
@@ -59,5 +65,6 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/javascripts/menu.js"></script>
+<script src="/javascripts/logout.js"></script>
 
 </html>
