add data to dashboard from db

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,5 @@
 <section class="post-list">
-    {{>post-list-item}}
+    {{#each posts as |post|}}
+    {{> post-list-item post}}
+    {{/each}}
 </section>
