--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,6 +65,9 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/javascripts/menu.js"></script>
+
+{{#if loggedIn}}
 <script src="/javascripts/logout.js"></script>
+{{/if}}
 
 </html>
