adjust seed insert sequence

--- a/views/addQuestion.handlebars
+++ b/views/addQuestion.handlebars
@@ -48,4 +48,5 @@
         </div>
         <button type="submit">Subtmit</button>
     </form>
+    <script src="/javascripts/add-question.js"></script>
 </section>
