fix icon path error

--- a/views/partials/post-list-item.handlebars
+++ b/views/partials/post-list-item.handlebars
@@ -15,7 +15,7 @@
         <div class="data-row">
             <div class="star" title="{{encounter_count}} people has encountered this question">
                 <div class="data_icon">
-                    <img src="assets/post_icons/eye.svg">
+                    <img src="/assets/post_icons/eye.svg">
                 </div>
                 <span>
                     {{encounter_count}}
@@ -23,7 +23,7 @@
             </div>
             <div class="comment" title="{{comments.length}} {{format_plural " comment" comments.length}}">
                 <div class="data_icon">
-                    <img src="assets/post_icons/comment.svg" alt="">
+                    <img src="/assets/post_icons/comment.svg" alt="">
                 </div>
                 <span>
                     {{comments.length}}
@@ -31,7 +31,7 @@
             </div>
             <div class="star" title="{{star_count}} {{format_person star_count}} starred this question">
                 <div class="data_icon">
-                    <img src="assets/post_icons/star.svg" alt="">
+                    <img src="/assets/post_icons/star.svg" alt="">
                 </div>
                 <span>
                     {{star_count}}
