--- a/views/partials/post-list-item.handlebars
+++ b/views/partials/post-list-item.handlebars
@@ -1,6 +1,8 @@
 <div class="post">
     <div class="post-head">
-        <h3>{{title}}</h3>
+        <a href="/questions/{{id}}">
+            <h3>{{title}}</h3>
+        </a>
     </div>
     <div class="post-body">
         <div class="info-row">
