--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,6 +1,85 @@
-{{>single-post}}
+<section class="post-info">
+    <div class="question-summary">
+        <span>{{difficulty.name}}</span>
+        <span class="splitter"></span>
+        <span class="post-type">{{type.name}}</span>
+        <span class="splitter"></span>
+        <span class="post-language">{{language.name}}</span>
+    </div>
+    <div class="question-head">
+        <h2>{{title}}</h2>
+    </div>
+    <div class="question-body">
+        {{answer}}
+    </div>
+    <div class="question-action">
+
+        <div class="star">
+            <div class="data_icon">
+                <img src="../assets/post_icons/eye.svg" alt="">
+            </div>
+            <span>
+                Met
+            </span>
+        </div>
+        <div class="comment">
+            <div class="data_icon">
+                <img src="../assets/post_icons/comment.svg" alt="">
+            </div>
+            <span>
+                Comment
+            </span>
+        </div>
+        <div class="star">
+            <div class="data_icon">
+                <img src="../assets/post_icons/star.svg" alt="">
+            </div>
+            <span>
+                Star
+            </span>
+        </div>
+        <div class="share">
+            <div class="data_icon">
+                <img src="../assets/post_icons/share.svg" alt="">
+            </div>
+            <span>
+                Share
+            </span>
+        </div>
+    </div>
+
+
+
+</section>
+<section class="comment-section">
+    <div class="comment-action">
+        <span>5 Answers</span>
+        <button>Comment</button>
+    </div>
+    <div class="comment-list">
+        <div class="single-comment">
+            <div class="comment-head">
+                <div>username</div>
+                <div>created date</div>
+
+
+
+            </div>
+            <div class="comment-body">
+                <p>comment</p>
+            </div>
+            <div class="comment-bottom">
+
+            </div>
+        </div>
+    </div>
+</section>
+
 
 {{!-- used '.star-btn' for activelistener --}}
 
 <script src="/javascripts/comment.js"></script>
-<script src="/javascripts/star.js"></script>
+
+{{!-- will add star js later --}}
+{{!--
+<script src="/javascripts/star.js"></script> --}}
