--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Blue IT</title>
-    <link rel="icon" href="./assets/images/logo.jpg" />
+    <link rel="icon" href="/assets/images/logo.jpg" />
     <link rel="stylesheet" href="/stylesheets/normalize.css" />
     <link rel="stylesheet" href="/stylesheets/login.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
