--- a/views/edit-question.handlebars
+++ b/views/edit-question.handlebars
@@ -1,19 +1,19 @@
 <section class="new-question">
-    <p>Upload your question</p>
+    <p>Update your question</p>
     <form id="addQuestion">
         <div class="title-part">
             <label for="title">Title:</label>
             <div class="content">
-                <input type="text" name="" id="title">
+                <input type="text" name="" id="title" value="{{title}}">
             </div>
         </div>
         <div class="answer-part">
             <label for="answer">Answer:</label>
 
-            <div class="content"> <textarea name="" id="answer" cols="30" rows="10"></textarea>
+            <div class="content"> <textarea name="" id="answer" cols="30" rows="10">{{answer}}</textarea>
             </div>
         </div>
-        <div class="difficulty-part">
+        <div class="difficulty-part" data-answer="{{difficulty_id}}">
             <label for="">Difficulty:</label>
             <div class="content">
                 <input type="radio" id="easy" name="difficulty" value="1">
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div class="language-part">
+        <div class="language-part" data-answer="{{language_id}}">
             <label for="language">Language:</label>
             <div class="content">
                 <select id="language">
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div class="type-part">
+        <div class="type-part" type-answer="{{type_id}}">
             <label for="type">Type:</label>
             <div class="content">
                 <input type="radio" id="interview" name="type" value="1">
@@ -57,7 +57,7 @@
             </div>
         </div>
         </div>
-        <button type="submit">Subtmit</button>
+        <button type="submit">Update</button>
     </form>
-    <script src="/javascripts/add-question.js"></script>
+    <script src="/javascripts/edit-question.js"></script>
 </section>
