--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,14 @@
 {{#if posts.length}}
 <section class="post-list">
     {{#each posts as |post|}}
-    {{> post-list-item post}}
+    <div class="post">
+        <div class="post-head">
+            <a href="/dashboard/questions/{{id}}">
+                <h3>{{title}}</h3>
+            </a>
+        </div>
+        {{> post-list-item post}}
+    </div>
     {{/each}}
 </section>
 {{else}}
