--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,6 +3,14 @@
 
 <section class="post-list">
     {{#each posts as |post|}}
+
+    <div class="post">
+        <div class="post-head">
+            <a href="/questions/{{id}}">
+                <h3>{{title}}</h3>
+            </a>
+        </div>
     {{> post-list-item post}}
+    </div>
     {{/each}}
 </section>
