seperate post list into two version - other's and own

--- a/views/homepage-post.handlebars
+++ b/views/homepage-post.handlebars
@@ -32,7 +32,7 @@
             </span>
         </div>
 
-        <div class="edit">
+        {{!-- <div class="edit">
 
             <a class="data_icon" href="/dashboard/edit-question/{{id}}">
                 <img src="/assets/post_icons/edit.svg" alt="edit icon">
@@ -49,15 +49,15 @@
             <span>
                 Delete
             </span>
-        </div>
-        {{!-- <div class="share">
+        </div> --}}
+        <div class="share">
             <div class="data_icon">
                 <img src="/assets/post_icons/share.svg" alt="share icon">
             </div>
             <span>
                 Share
             </span>
-        </div> --}}
+        </div>
         {{!-- <div class="action">
             <div class="data_icon">
                 <img src="/assets/post_icons/ellipsis.svg" alt="sllipsis icon">
