--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="login right-panel-active">
+<div class="login">
     <!-- SIGN UP -->
     <div class="container_form container--signup">
         <form class="form" id="signUp-form">
