add link to edit button

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -33,14 +33,14 @@
         </div>
 
         <div class="edit">
-
-            <a class="data_icon" href="/dashboard/edit-question/{{id}}">
-                <img src="/assets/post_icons/edit.svg" alt="edit icon">
+            <a href="/dashboard/edit-question/{{id}}">
+                <div class="data_icon">
+                    <img src="/assets/post_icons/edit.svg" alt="edit icon">
+                </div>
+                <span>
+                    Edit
+                </span>
             </a>
-            <span>
-                Edit
-            </span>
-
         </div>
         <div class="delete">
             <div class="data_icon">
